# natural-data

./: .gitignore  README.md
hypsibius-slack/: pyproject.toml
hypsibius-slack/hypsibius_slack/: __init__.py  app.py  config.py
hypsibius-slack/hypsibius_slack/history/: __init__.py  collect.py
hypsibius-slack/hypsibius_slack/models/: __init__.py  conversation.py  message.py  team.py  user.py
hypsibius-slack/hypsibius_slack/realtime/: app.py  messages.py
llm/: pyproject.toml
llm/llm/: app.py
llm/llm/clustering/: base.py  sklearn_kmeans.py  sklearn_optics.py
llm/llm/core/: camel_5b_hf.py  gpt4all.py  service_context.py
llm/llm/core/classifiers/: __init__.py  emotions.py  evidence_types.py  website_classification.py  wellformedness.py  zero_shot.py
llm/llm/core/embeddings/: all_minilm_l6_v2.py  all_mpnet_base_v2.py
llm/llm/core/engines/: default.py
llm/llm/core/entities/: span_marker_roberta_large_ontonotes5.py  span_marker_xlm_roberta_large_conllpp_doc_context.py  utils.py
llm/llm/core/indexes/: vector.py
llm/llm/core/llm_predictors/: camel_5b_hf.py  gpt4all.py
llm/llm/core/retrievers/: default.py
llm/llm/demos/: local.py  slack.py
llm/llm/labelling/: nodes_with_score_to_labels.py
llm/llm/utils/: head_tail_ordered_dict.py
llm/notebooks/: joni.ipynb
llm/storage/: docstore.json  index_store.json  labels.json  vector_store.json
platform/: README.md  install.bash
platform/functions/: deploy.bash  update.bash
platform/functions/text-classification.api/: Procfile  func.yaml  pyproject.toml  save_models.py
platform/functions/text-classification.api/models/emotions/model/: config.json
platform/functions/text-classification.api/models/evidence/model/: config.json
platform/functions/text-classification.api/models/website/model/: config.json
platform/functions/text-classification.api/models/wellformed/model/: config.json
platform/functions/text-classification.api/models/zeroshot/: config.json
platform/functions/text-classification.api/text_classification/: app.py  devices.py
platform/functions/text-classification.api/text_classification/classifiers/: __init__.py  emotions.py  evidence_types.py  website_classification.py  wellformedness.py  zero_shot.py
platform/functions/text-classification.api/text_classification/utils/: head_tail_ordered_dict.py  listify.py  print_node_score.py
(+218 files in other folders)
